# Network-Packet-Inspection-Protocol-Validation-System

./: .gitignore  BACKEND_INTEGRATION_STATUS.md  IMPLEMENTATION_SUMMARY.md
backend/: CMakeLists.txt
backend/include/packet_inspection/dfa/: dfa_matcher.hpp
backend/include/packet_inspection/pcap/: packet_reader.hpp
backend/include/protocol_validation/http_pda/: http_pda_validator.hpp
backend/pcap/: dfa_builder.cpp  packet_reader.cpp  patterns.json
backend/src/: main.cpp
backend/src/packet_inspection/ac/: aho_corasick.cpp
backend/src/packet_inspection/dfa/: dfa_builder.cpp  dfa_matcher.cpp
backend/src/packet_inspection/utils/: patterns_loader.cpp
docs/: IMPLEMENTATION_GUIDE.md  automata-format.md
docs/HTTP-PDA_Validation/: PDAController.cpp  PDAController.hpp  PDAEngine.cpp
frontend/: .gitignore  ARCHITECTURE_DIAGRAM.md  DFA_VISUALIZER_GUIDE.md  PACKET_INSPECTION_REFACTORING.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend-notes/: magic_bento.txt
frontend/src/: App.css  App.tsx  fonts.css  index.css  main.tsx
frontend/src/automata/: dfaVisualizer.tsx
frontend/src/components/: AcTrieVisualizer.css  AcTrieVisualizer.tsx  DFAGraph.tsx  DFAVisualizer.css  DFAVisualizer.tsx  HexView.css  HexView.tsx  MagicBento.css  MagicBento.tsx  PDAVisualizer.css  PDAVisualizer.tsx  PacketGenerator.css  PacketGenerator.tsx  PacketList.css  PacketList.tsx  Particles.css  Particles.tsx  PatternStateDiagram.css  PatternStateDiagram.tsx  ProtocolValidationVisualizer.css  ProtocolValidationVisualizer.tsx  ResultViewTabs.css  ResultViewTabs.tsx  ResultsView.css  ResultsView.tsx  StackVisualizer.css  StackVisualizer.tsx  Tabs.css  Tabs.tsx
frontend/src/utils/: README_MODULES.md  ahoCorasick.ts  dfa.ts  dfaEngine.ts  dfaInspector.ts  dfaInspectorController.ts  dfaPacketInspection.ts  packetGenerator.ts  pdaController.ts  pdaDiagnostic.ts  pdaEngine.ts  testPDA.ts
logic_notes/: CNF_PATTERN_MATCHING_INTEGRATION.md  pattern_matching.cpp
misc/: COMPLETION_REPORT.md  PDA_VALIDATION_ASSESSMENT.md
misc/backend/: CMakeLists.txt
misc/backend/include/packet_inspection/ac/: aho_corasick.hpp
misc/backend/include/packet_inspection/dfa/: dfa_builder.hpp  dfa_matcher.hpp
misc/backend/include/packet_inspection/utils/: patterns_loader.hpp
misc/backend/src/packet_inspection/pcap/: packet_reader.cpp
misc/backend/src/protocol_validation/http_pda/: http_pda_validator.cpp
misc/docs/: COPILOT-GUIDE.md  architecture.md
misc/frontend-notes/: particles_background.txt  tabs.txt
(+6 files in other folders)
